@@ -1079,5 +1079,10 @@ Fri Jun  1 08:13:25 CEST 2001
 	- Synced preproc.y with gram.y.
 	- Synced pgc.l with scan.l.
 	- Synced keyword.c.
+
+Wed Jun 13 14:39:12 CEST 2001
+
+	- Synced preproc.y with gram.y.  
+	- Applied bug fix by John Summerfield.
 	- Set ecpg version to 2.9.0.
 	- Set library version to 3.3.0.
